--- a/ClassifierDemo/Base.lproj/Main.storyboard
+++ b/ClassifierDemo/Base.lproj/Main.storyboard
@@ -18,16 +18,18 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Add a photo of your pet to show the classification" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xsx-dV-gR1">
-                                <rect key="frame" x="16" y="611" width="382" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <rect key="frame" x="16" y="596" width="382" height="36"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="36" id="z3l-PZ-ZKg"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="empty-photo" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="nzl-FL-B2a">
                                 <rect key="frame" x="16" y="164" width="382" height="415"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="415" id="L3R-GL-rAW"/>
-                                    <constraint firstAttribute="width" constant="382" id="vpq-tF-LoL"/>
+                                    <constraint firstAttribute="height" constant="415" id="ORE-K3-Jw9"/>
                                 </constraints>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
@@ -63,15 +65,14 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="nzl-FL-B2a" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="55k-Nr-XHL"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="RET-Rs-Ctu" secondAttribute="bottom" constant="150" id="AhI-Zq-Yyq"/>
                             <constraint firstItem="GoL-Q5-dDi" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Hhz-Md-BFh"/>
                             <constraint firstItem="RET-Rs-Ctu" firstAttribute="top" secondItem="xsx-dV-gR1" secondAttribute="bottom" constant="50" id="Qjf-B7-KxG"/>
+                            <constraint firstItem="xsx-dV-gR1" firstAttribute="top" secondItem="nzl-FL-B2a" secondAttribute="bottom" constant="17" id="Xd9-Tf-kri"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="RET-Rs-Ctu" secondAttribute="trailing" constant="56" id="ZSi-j2-lJ6"/>
                             <constraint firstItem="xsx-dV-gR1" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="aqT-fl-cjS"/>
-                            <constraint firstItem="nzl-FL-B2a" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="120" id="dfV-aM-lCq"/>
+                            <constraint firstItem="nzl-FL-B2a" firstAttribute="top" secondItem="GoL-Q5-dDi" secondAttribute="bottom" constant="76" id="e61-zE-GTC"/>
                             <constraint firstItem="GoL-Q5-dDi" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="gTx-Pj-hhQ"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="nzl-FL-B2a" secondAttribute="trailing" constant="16" id="kiX-ib-tyx"/>
-                            <constraint firstItem="xsx-dV-gR1" firstAttribute="top" secondItem="nzl-FL-B2a" secondAttribute="bottom" constant="32" id="n4d-8q-gEx"/>
                             <constraint firstItem="RET-Rs-Ctu" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="56" id="uk2-XH-ZrF"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="xsx-dV-gR1" secondAttribute="trailing" constant="16" id="xx4-0j-OYU"/>
                             <constraint firstItem="GoL-Q5-dDi" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="yWs-YB-38q"/>
